[package]
name = "solana-download-utils"
description = "Solana Download Utils"
documentation = "https://docs.rs/solana-download-utils"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
# FIREDANCER: The solana-file-download crate has some code that we
# modify for the GUI, so we add back that code in here and we need
# to re-enable these workspace dependencies.
console = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "brotli", "deflate", "gzip", "rustls-tls", "json"] }
solana-clock = { workspace = true }
solana-file-download = { workspace = true }
solana-genesis-config = { workspace = true }
solana-runtime = { workspace = true }

[dev-dependencies]
solana-runtime = { workspace = true, features = ["dev-context-only-utils"] }

[lib]
crate-type = ["lib"]
name = "solana_download_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
